# reconpilot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
reconpilot/: __init__.py  __main__.py  cli.py  config.py
reconpilot/core/: database.py  events.py  models.py  orchestrator.py  rules.py  scoring.py
reconpilot/dashboard/: app.py
reconpilot/dashboard/widgets/: __init__.py  findings.py  log_view.py  stats_bar.py  task_list.py
reconpilot/reports/: generator.py
reconpilot/reports/templates/: report.html.j2  report.md.j2
reconpilot/tools/: base.py  registry.py
reconpilot/tools/adapters/: __init__.py  amass.py  assetfinder.py  dnsrecon.py  dnsx.py  httpx.py  masscan.py  nikto.py  nmap.py  nuclei.py  rustscan.py  subfinder.py  wafw00f.py  whatweb.py  whois.py  wpscan.py
reconpilot/utils/: helpers.py
scripts/: check-tools.py  install-kali.sh
tests/: conftest.py  test_cli.py  test_orchestrator.py  test_reports.py
