[project]
name = "reconpilot"
version = "0.1.0"
description = "AI-Powered Reconnaissance Orchestrator for Penetration Testing"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "gh0stshe11"}]
keywords = ["security", "pentesting", "reconnaissance", "cybersecurity", "hacking", "infosec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "textual>=0.47.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pre-commit>=3.6.0",
]

[project.scripts]
reconpilot = "reconpilot.cli:app"
rp = "reconpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
